Добавление файлов .scss

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -5,3 +5,30 @@
 
 /* BLOCKS */
 @import "./blocks/header.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/link.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/promo.scss";
+@import "./blocks/button.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/programs.scss";
+@import "./blocks/functions.scss";
+@import "./blocks/example.scss";
+@import "./blocks/cat-slider.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/card.scss";
+@import "./blocks/sub-products.scss";
+@import "./blocks/actions.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/social.scss";
+@import "./blocks/academy.scss";
+
+
+body {
+  $bg-color: darkorange;
+  background-color: $bg-color;
+}
