Добавила стили на тексты

--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,6 @@
 /* здесь используйте глобальные переменные */
+$basic-black: #000000;
+$basic-black2: #111111;
+$basic-black3: #222222;
+$basic-white: #ffffff;
+$special-dark-grey: #444444;
