Добавила стили-заглушки в остальные пустые .scss для прохождения проверки lint:styles

--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -3,4 +3,5 @@ $basic-black: #000000;
 $basic-black2: #111111;
 $basic-black3: #222222;
 $basic-white: #ffffff;
+$basic-grey: #f2f2f2;
 $special-dark-grey: #444444;
