Удалила картинки, вернула одинаковые заголовки, убрала span из кнопок, form

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -22,6 +22,7 @@
 @import "./blocks/cat-slider.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/card.scss";
+@import "./blocks/catalog-subheader.scss";
 @import "./blocks/sub-products.scss";
 @import "./blocks/actions.scss";
 @import "./blocks/main-footer.scss";
