--- a/source/styles/blocks/catalog-subheader.scss
+++ b/source/styles/blocks/catalog-subheader.scss
@@ -1,5 +1,5 @@
-.actions__description {
-  font-size: 24px;
+.catalog-subheader {
+  font-size: 32px;
   line-height: 32px;
   color: $basic-black;
   letter-spacing: 0;
