--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,4 +1,4 @@
-.button__button-text {
+.button {
   font-size: 16px;
   line-height: 20px;
   color: $basic-white;
@@ -6,11 +6,11 @@
   text-align: center;
 }
 
-.button__button-text--second {
+.button--second {
   color: $special-dark-grey;
 }
 
-.button__button-text--third {
+.button--third {
   font-size: 20px;
   line-height: 26px;
 }
