Добавила font-weight заголовкам

--- a/source/styles/blocks/card.scss
+++ b/source/styles/blocks/card.scss
@@ -5,6 +5,7 @@
   letter-spacing: 0;
   text-align: center;
   text-transform: uppercase;
+  font-weight: 400;
 }
 
 .card__table-cell {
@@ -14,6 +15,7 @@
   color: $special-dark-grey;
   letter-spacing: 0;
   text-align: center;
+  font-weight: 400;
 }
 
 .card__item-description {
