--- a/source/styles/blocks/catalog-subheader.scss
+++ b/source/styles/blocks/catalog-subheader.scss
@@ -1,7 +1,8 @@
 .catalog-subheader {
-  font-size: 32px;
-  line-height: 32px;
+  font-size: 24px;
+  line-height: 24px;
   color: $basic-black;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
+  font-weight: 400;
 }
