--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,3 +1,6 @@
 .page__body {
   background-color: $basic-white;
+  font-family: "Oswald", sans-serif;
+  color: $basic-black;
+  font-weight: 400;
 }
