--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -23,3 +23,7 @@
   letter-spacing: 0;
   text-align: center;
 }
+
+.programs__link {
+  background-image: url("../../icons/stack.svg#arrow-right");
+}
