--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -7,6 +7,11 @@
   font-weight: 400;
 }
 
+.sub-products__actions {
+  background-image: url("../../icons/stack.svg#icon_gift");
+  background-color: $basic-green;
+}
+
 .sub-products__text {
   font-family: "Lato", sans-serif;
   font-size: 16px;
