--- a/source/styles/blocks/functions.scss
+++ b/source/styles/blocks/functions.scss
@@ -7,6 +7,10 @@
   font-weight: 400;
 }
 
+.functions__list {
+  @include list-reset();
+}
+
 .functions__item {
   font-family: "Lato", sans-serif;
   font-size: 14px;
