--- a/source/styles/blocks/functions.scss
+++ b/source/styles/blocks/functions.scss
@@ -9,6 +9,15 @@
 
 .functions__list {
   @include list-reset();
+
+  @media screen and (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .functions__item {
