--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,3 +1,9 @@
+.example {
+  @media screen and (min-width: $desktop-width) {
+    display: grid;
+  }
+}
+
 .example__subheader {
   font-size: 36px;
   line-height: 40px;
@@ -14,6 +20,22 @@
   color: $special-dark-grey;
   letter-spacing: 0;
   text-align: left;
+}
+
+.example__wrapper {
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    flex-direction: column;
+  }
+}
+
+.example__list {
+  display: flex;
+  flex-direction: row;
 }
 
 .example__item-text {
