--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,3 +1,29 @@
 .main-nav {
   background-color: $basic-white;
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $tablet-width) {
+    flex-direction: row;
+  }
+}
+
+.main-nav__header {
+  display: flex;
+  flex-direction: row;
+}
+
+.main-nav__toggle {
+  @media screen and  (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav__list {
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $tablet-width) {
+    flex-direction: row;
+  }
 }
