--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -6,3 +6,7 @@ $basic-white: #ffffff;
 $basic-grey: #f2f2f2;
 $special-dark-grey: #444444;
 $basic-green: #68b738;
+
+/* Viewports */
+$tablet-width:768px;
+$desktop-width: 1200px;
