--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,3 +1,14 @@
 .social {
   background-color: $basic-grey;
 }
+
+.social__content {
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $tablet-width) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
