--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,23 +1,61 @@
 .main-nav {
-  background-color: $basic-white;
+  // background-color: $basic-white;
   display: flex;
   flex-direction: column;
 
+
   @media screen and (min-width: $tablet-width) {
     flex-direction: row;
+    padding: 0 30px;
+    gap: 94px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    justify-content: space-between;
+    width: 1220px;
+    margin: 0 auto;
+    padding: 0;
+    padding-top: 50px;
+    position: relative;
+    z-index: 2;
   }
 }
 
 .main-nav__header {
+  height: 65px;
+  padding-top: 13px;
+  padding-bottom: 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid $basic-grey-2;
+
+  @media screen and (min-width: $tablet-width) {
+    height: 75px;
+    width: 174px;
+    margin: 0;
+    padding: 0;
+    border-bottom: none;
+  }
 }
 
 .main-nav__toggle {
+  background-color: $basic-white;
+  background-image: url("../../icons/stack.svg#icon-line");
+  background-repeat: no-repeat;
+  background-size: 24px 24px;
+  border: none;
+  width: 24px;
+  height: 24px;
+
   @media screen and  (min-width: $tablet-width) {
     display: none;
   }
+}
+
+.main-nav__toggle--close {
+  background-image: url("../../icons/stack.svg#icon-x");
 }
 
 .main-nav__list {
@@ -26,5 +64,63 @@
 
   @media screen and (min-width: $tablet-width) {
     flex-direction: row;
+    gap: 33px;
+    align-items: baseline;
+  }
+}
+
+.main-nav__item {
+  border-bottom: 1px solid $basic-grey-2;
+  height: 66px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+
+  @media screen and (min-width: $tablet-width) {
+    border-bottom: none;
+    height: 75px;
+  }
+}
+
+.main-nav__item-link {
+  text-decoration: none;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: $basic-black;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    color: $basic-white;
+
+    // &:hover {
+    //   border-bottom: 2px solid $basic-white;
+    // }
+  }
+}
+
+.main-nav__item-link--active {
+  @media screen and (min-width: $tablet-width) {
+    border-bottom: 2px solid $basic-green;
+    padding-bottom: 10px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    border-bottom: 2px solid $basic-white;
   }
 }
