--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -4,6 +4,7 @@ $basic-black2: #111111;
 $basic-black3: #222222;
 $basic-white: #ffffff;
 $basic-grey: #f2f2f2;
+$basic-grey-2: #e6e6e6;
 $special-dark-grey: #444444;
 $basic-green: #68b738;
 
