--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,6 +1,7 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
 * {
   box-sizing: border-box;
+  outline: 2px solid rgba(255, 0, 0, 0.8);
 }
 
 .visually-hidden {
@@ -14,6 +15,7 @@
   padding-right: 20px;
   margin: 0 auto;
   width: 320px;
+  max-width: 90%;
 
   @media screen and (min-width: $tablet-width) {
     padding-left: 30px;
