--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,5 +1,17 @@
 .social {
   background-color: $basic-grey;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding-top: 55px;
+    padding-bottom: 55px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding-top: 66px;
+    padding-bottom: 66px;
+  }
 }
 
 .social__content {
