--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,6 +1,35 @@
 .example {
+  background-color: $basic-grey;
+
+  @media screen and (min-width: $tablet-width) {
+    background-image: linear-gradient(180deg, $basic-white 50%, $basic-grey 50%);
+    border-top: 1px solid $basic-grey-2;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    background-image: linear-gradient(180deg, $basic-white 25%, 35px, $basic-grey);
+    border-top: none;
+  }
+}
+
+.example__content {
+  padding-top: 25px;
+  padding-bottom: 40px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding-top: 45px;
+    padding-bottom: 101px;
+  }
+
   @media screen and (min-width: $desktop-width) {
     display: grid;
+  }
+}
+
+.example__header {
+  @media screen and (min-width: $desktop-width) {
+    width: 436px;
+    padding: 0;
   }
 }
 
@@ -9,8 +38,20 @@
   line-height: 40px;
   color: $basic-black;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
   font-weight: 400;
+  margin: 0 0 40px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 436px;
+    margin-bottom: 146px;
+  }
 }
 
 .example__description {
@@ -20,22 +61,62 @@
   color: $special-dark-grey;
   letter-spacing: 0;
   text-align: left;
+  margin: 0;
+  padding-bottom: 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding-bottom: 55px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 436px;
+  }
 }
 
 .example__wrapper {
   @media screen and (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
   }
 
   @media screen and (min-width: $desktop-width) {
     flex-direction: column;
   }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 436px;
+    padding: 0;
+  }
 }
 
 .example__list {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 32px;
+  padding-bottom: 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    gap: 42px;
+    padding-bottom: 99px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding-bottom: 55px;
+  }
+}
+
+.example__item {
+  border: 1px solid $special-grey;
+  border-radius: 3px;
+  position: relative;
+  width: 124px;
+
+  @media screen and (min-width: $tablet-width) {
+    width: 162px;
+  }
 }
 
 .example__item-text {
@@ -43,7 +124,17 @@
   line-height: 24px;
   color: $basic-black;
   letter-spacing: 0;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 56px;
+  text-transform: uppercase;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+    height: 77px;
+  }
 }
 
 .example__item-text-second {
@@ -52,7 +143,24 @@
   line-height: 12px;
   color: $special-dark-grey;
   letter-spacing: 0;
-  text-align: left;
+  text-align: center;
+  position: absolute;
+  top: 88%;
+  background-color: $basic-grey;
+  left: 20%;
+  width: 74px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 14px;
+    line-height: 14px;
+    background-color: $basic-white;
+    width: 120px;
+    left: 13%;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    background-color: $basic-grey;
+  }
 }
 
 .example__text {
@@ -61,4 +169,20 @@
   color: $basic-black;
   letter-spacing: 0;
   text-align: center;
+  display: block;
+  padding: 20px 0;
+  text-transform: uppercase;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    width: 174px;
+    text-align: right;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 436px;
+    text-align: left;
+    padding: 0;
+  }
 }
