--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -1,9 +1,61 @@
+.sub-products__header {
+  position: relative;
+  margin: 25px 0 36px;
+
+  &::after {
+    content: "";
+    border-bottom: 2px solid #68b738;
+    width: 35px;
+    position: absolute;
+    top: 50%;
+    left: 95%;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 32px;
+    line-height: 32px;
+    margin: 0 0 80px;
+    width: 385px;
+    padding: 0 40px;
+
+    &::after {
+      width: 358px;
+    }
+
+    &::before {
+      content: "";
+      border-bottom: 2px solid #68b738;
+      width: 30px;
+      position: absolute;
+      left: -30px;
+      top: 50%;
+    }
+  }
+}
+
 .sub-products__list {
   @include list-reset();
+  border-top: 1px solid $special-grey;
+
+  @media screen and (min-width: $tablet-width) {
+    border-left: 1px solid $special-grey;
+    border-right: 1px solid $special-grey;
+  }
 }
 
 .sub-products__item {
   display: grid;
+  border-bottom: 1px solid $special-grey;
+  padding-top: 10px;
+  padding-bottom: 19px;
+  gap: 10px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding: 26px 38px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+  }
 
   @media screen and (min-width: $desktop-width) {
     grid-template-columns: repeat(3, 1fr);
@@ -15,13 +67,35 @@
   line-height: 20px;
   color: $basic-black3;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
   font-weight: 400;
+  margin: 0;
+}
+
+.sub-products__item-property {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 14px;
+  line-height: 20px;
+  color: $special-dark-grey;
+
+  @media screen and (min-width: $tablet-width) {
+    gap: 50px;
+    justify-content: end;
+  }
 }
 
 .sub-products__actions {
-  background-image: url("../../icons/stack.svg#icon_gift");
-  background-color: $basic-green;
+  background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-mobile@1x.png");
+  height: 290px;
+  margin-top: 35px;
+
+  @media screen and (min-width: $tablet-width) {
+    margin-top: 70px;
+    height: 200px;
+    background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-tablet@1x.png");
+  }
 }
 
 .sub-products__text {
@@ -33,11 +107,35 @@
   text-align: center;
 }
 
+.sub-products__button {
+  @media screen and (min-width: $tablet-width) {
+    grid-column: 1/-1;
+  }
+}
+
 .sub-products__actions-description {
   font-family: "Lato", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: $basic-white;
   letter-spacing: 0;
-  text-align: left;
+  text-align: center;
+  padding-top: 187px;
+  padding-bottom: 43px;
+  width: 161px;
+  background-image: url("../../icons/stack.svg#icon_gift");
+  background-size: 78px 80px;
+  background-repeat: no-repeat;
+  background-position: center 30%;
+  margin: 0 auto;
+  display: block;
+
+  @media screen and (min-width: $tablet-width) {
+    padding-top: 71px;
+    padding-left: 50%;
+    background-position: 20% 65%;
+    margin: 0;
+    width: 75%;
+    text-align: left;
+  }
 }
