--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,5 +1,5 @@
 .button {
-  // font-size: 16px;
+  font-family: "Oswald", sans-serif;
   // line-height: 20px;
   color: $basic-white;
   // letter-spacing: 0;
