--- a/source/styles/blocks/catalog-subheader.scss
+++ b/source/styles/blocks/catalog-subheader.scss
@@ -1,8 +1,14 @@
 .catalog-subheader {
+  font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 24px;
   color: $basic-black;
   letter-spacing: 0;
   text-align: left;
   font-weight: 400;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 32px;
+    line-height: 32px;
+  }
 }
