--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -33,6 +33,13 @@
   }
 }
 
+.sub-products__content {
+  @media screen and (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .sub-products__list {
   @include list-reset();
   border-top: 1px solid $special-grey;
@@ -40,6 +47,11 @@
   @media screen and (min-width: $tablet-width) {
     border-left: 1px solid $special-grey;
     border-right: 1px solid $special-grey;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    border-left: none;
+    border-right: none;
   }
 }
 
@@ -59,6 +71,9 @@
 
   @media screen and (min-width: $desktop-width) {
     grid-template-columns: repeat(3, 1fr);
+    padding: 14px 0;
+    width: 896px;
+    gap: 40px;
   }
 }
 
@@ -70,6 +85,10 @@
   text-align: left;
   font-weight: 400;
   margin: 0;
+
+  @media screen and (min-width: $desktop-width) {
+    align-self: center;
+  }
 }
 
 .sub-products__item-property {
@@ -84,6 +103,11 @@
     gap: 50px;
     justify-content: end;
   }
+
+  @media screen and (min-width: $desktop-width) {
+    justify-content: space-between;
+    align-self: center;
+  }
 }
 
 .sub-products__actions {
@@ -95,6 +119,13 @@
     margin-top: 70px;
     height: 200px;
     background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-tablet@1x.png");
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin: 0;
+    width: 245px;
+    height: 288px;
+    background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-desktop@1x.png");
   }
 }
 
@@ -110,6 +141,10 @@
 .sub-products__button {
   @media screen and (min-width: $tablet-width) {
     grid-column: 1/-1;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    grid-column: 3/-1;
   }
 }
 
