--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -31,7 +31,7 @@
   }
 }
 
-.main-header__main-page {
+.main-header--first {
   @media screen and (min-width: $desktop-width) {
     background-image: linear-gradient(90deg, $basic-white 50%, rgb(100, 168, 59, 0.85) 50%), url("../../images/index-background-desktop@1x.png"), linear-gradient(90deg, #3f3e41, #3f3e41);
     background-position: center, calc(50% + 360px) center;
