--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -8,6 +8,8 @@
     flex-direction: row;
     padding: 0 30px;
     gap: 94px;
+    width: 768px;
+    margin: 0 auto;
   }
 
   @media screen and (min-width: $desktop-width) {
@@ -23,19 +25,26 @@
 
 .main-nav__header {
   height: 65px;
-  padding-top: 13px;
+  padding-top: 15px;
   padding-bottom: 15px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  border-bottom: 1px solid $basic-grey-2;
 
 
   @media screen and (min-width: $tablet-width) {
     height: 75px;
     width: 174px;
-    margin: 0;
-    padding: 0;
+    border-bottom: none;
+  }
+}
+
+.main-nav__header-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  @media screen and (min-width: $tablet-width) {
+    width: 708px;
   }
 }
 
