--- a/source/styles/blocks/actions.scss
+++ b/source/styles/blocks/actions.scss
@@ -1,4 +1,5 @@
 .actions {
+  overflow-x: hidden;
   padding-top: 40px;
   padding-bottom: 40px;
 
@@ -14,7 +15,50 @@
 }
 
 .actions__header {
-  margin: 0;
+  position: relative;
+
+  &::after {
+    content: "";
+    border-bottom: 2px solid #68b738;
+    width: 100vw;
+    position: absolute;
+    top: 50%;
+    left: calc(100% - 120px);
+  }
+
+  &::before {
+    content: "";
+    border-bottom: 2px solid #68b738;
+    width: 100vw;
+    position: absolute;
+    right: calc(100% + 40px);
+    top: 50%;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    margin-bottom: 80px;
+    font-size: 32px;
+    line-height: 32px;
+    padding-left: 70px;
+
+    &::after {
+      left: calc(100% - 445px);
+    }
+
+    &::before {
+      right: calc(100% - 30px);
+    }
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    &::before {
+      right: calc(100% - 20px);
+    }
+
+    &::after {
+      left: calc(100% - 947px);
+    }
+  }
 }
 
 .actions__description {
