--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -11,8 +11,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 20px 0;
-  padding: 20px 0;
+  margin: 13px 0 20px;
+  padding: 20px 0 19px;
   list-style: none;
   display: flex;
   border-top: 1px solid $special-grey-2;
