--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -4,7 +4,8 @@
 
 .sub-products__header {
   position: relative;
-  margin: 25px 0 36px;
+  padding-top: 25px;
+  padding-bottom: 36px;
 
   &::after {
     content: "";
@@ -20,20 +21,33 @@
     border-bottom: 2px solid #68b738;
     width: 100vw;
     position: absolute;
-    right: calc(100% + 0px);
+    right: calc(100% + 40px);
     top: 50%;
   }
 
   @media screen and (min-width: $tablet-width) {
+    margin-bottom: 80px;
     font-size: 32px;
     line-height: 32px;
-    margin: 0 0 80px;
-    width: 385px;
-    padding: 0 40px;
+    padding-left: 70px;
 
-    // &::after {
-    //   // width: 358px;
-    // }
+    &::after {
+      left: calc(100% - 345px);
+    }
+
+    &::before {
+      right: calc(100% - 30px);
+    }
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    &::after {
+      left: calc(100% - 860px);
+    }
+
+    &::before {
+      right: calc(100% - 20px);
+    }
   }
 }
 
@@ -118,11 +132,28 @@
   background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-mobile@1x.png");
   height: 290px;
   margin-top: 35px;
+  position: relative;
+
+  &::before {
+    content: "";
+    background-image: url("../../icons/stack.svg#icon_gift");
+    background-size: 78px 80px;
+    background-repeat: no-repeat;
+    background-position: center 30%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
 
   @media screen and (min-width: $tablet-width) {
     margin-top: 70px;
     height: 200px;
     background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-tablet@1x.png");
+
+    &::before {
+      background-position: 70px 50%;
+    }
   }
 
   @media screen and (min-width: $desktop-width) {
@@ -130,6 +161,10 @@
     width: 245px;
     height: 288px;
     background-image: linear-gradient(180deg, rgba(100, 168, 59, 0.85) 100%, #ffffff), url("../../images/actions-cat-desktop@1x.png");
+
+    &::before {
+      background-position: 50% 56px;
+    }
   }
 }
 
@@ -162,19 +197,24 @@
   padding-top: 187px;
   padding-bottom: 43px;
   width: 161px;
-  background-image: url("../../icons/stack.svg#icon_gift");
-  background-size: 78px 80px;
-  background-repeat: no-repeat;
-  background-position: center 30%;
   margin: 0 auto;
   display: block;
+  position: relative;
+
 
   @media screen and (min-width: $tablet-width) {
     padding-top: 71px;
-    padding-left: 50%;
-    background-position: 20% 65%;
+    padding-left: 421px;
     margin: 0;
-    width: 75%;
+    width: 583px;
     text-align: left;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding-top: 185px;
+    padding-left: 42px;
+    margin: 0;
+    width: 201px;
+    text-align: center;
   }
 }
